--- a/static/css/style.css
+++ b/static/css/style.css
@@ -762,3 +762,134 @@ td .text-center h5{
     margin-left: 3%;
     margin-right: 3%;
 }
+
+/*  mySpecificList.html       */
+
+.mySpecificListBox{
+    width:70%
+    padding: 3%;
+    margin-top: 2%;
+    margin-left: 3%;
+    margin-right: 3%;
+    margin-bottom: 3%;
+    box-shadow: 5px 5px 10px rgba(0,0,0,0.5);
+    border-radius: 0.5rem;
+    background: #fff;
+}
+
+.mySpecificListSpan{
+    margin-top:1%;
+}
+
+.mySpecificListButtonsReserved{
+    background-color: #cf057c;
+    color: white;
+    border: 1px solid #cf057c;
+    margin-right:4%;
+    float:right;
+}
+
+
+.mySpecificListButtonsReserved:hover{
+    background-color: #023E8A;
+    color: white;
+    border: 1px solid #023E8A;
+}
+
+.mySpecificListButtonsReservedCancel{
+    background-color: #023E8A;
+    color: white;
+    border: 1px solid #023E8A;
+    margin-right:4%;
+    float:right;
+}
+
+.mySpecificListButtonsReservedCancel{
+    background-color: #023E8A;
+    color: white;
+    border: 1px solid #023E8A;
+    margin-right:4%;
+    float:right;
+}
+
+.mySpecificListButtonsReservedCancel:hover{
+    background-color: #023E8A;
+    color: white;
+}
+
+.mySpecificListButtonsBack{
+    background-color: #cf057c;
+    color: white;
+    border: 1px solid #cf057c;
+    margin-top:2%;
+    margin-bottom: 2%;
+}
+
+.mySpecificListButtonsBack:hover{
+    background-color: #023E8A;
+    color: white;
+    border: 1px solid #023E8A;
+}
+
+.mySpecificListButtonNoneOnList{
+    background-color: #cf057c;
+    color: white;
+    border: 1px solid #cf057c;
+    margin-bottom: 4%;
+    margin-top: 2%;
+}
+
+.mySpecificListButtonNoneOnList:hover{
+    background-color: #023E8A;
+    color: white;
+    border: 1px solid #023E8A;
+}
+
+.mySpecificListButtonLinkOnPresent{
+    background-color: #cf057c;
+    color: white;
+    border: 1px solid #cf057c;
+    margin-right:2%;
+    float:right;
+}
+
+.mySpecificListButtonLinkOnPresent:hover{
+    background-color: #023E8A;
+    color: white;
+    border: 1px solid #023E8A;
+}
+
+.mySpecificListNoneElementsOnList{
+    margin-left:2%;
+    margin-bottom: 2%;
+    margin-right: 2%
+    margin-top:3%;
+}
+
+.mySpecificListElementsInListBox{
+    margin-left:2%;
+    margin-bottom: 2%;
+    margin-right: 2%
+    margin-top:3%;
+
+}
+.mySpecificListTitleBox{
+    margin-top:3%;
+    margin-left:2%;
+    margin-bottom: 2%;
+    margin-right: 2%;
+    padding-top: 2%;
+
+}
+.mySpecificListTitle{
+    margin-bottom:2%;
+}
+
+.mySpecificListElementsInListBox ul{
+    list-style:none;
+}
+
+.mySpecificListElementsInListBox ul li{
+    margin-top:2%;
+    margin-bottom:2%;
+}
