--- a/static/css/style.css
+++ b/static/css/style.css
@@ -939,12 +939,13 @@ td .text-center h5{
     border-radius: 5px;
 }
 
+/*  friend_invites.html       */
+
 .friendInvitesBox{
     box-shadow: 5px 5px 10px rgba(0,0,0,0.5);
     margin-bottom: 3%;
-    margin-left: 18%;
-    margin-right: 18%;
-    margin-top: 5%;
+    margin-left: 15%;
+    margin-right: 15%;
 }
 
 .friendInvitesTitle{
@@ -952,7 +953,61 @@ td .text-center h5{
     font-size: 24px;
 }
 
-.friendInvitesBox ul li img{
-    width: 30%;
-    height: 30%;
+.friendInvitesContent{
+    margin-bottom: 2%;
+    margin-left: 2%;
+    margin-right: 2%;
+}
+.friendInvitesEmptyFriend{
+    margin-top:3%;
+    margin-bottom: 3%;
+    text-align:center;
+}
+
+.friendInvitesLoginUser{
+    font-weight: bold;
+    color:#cf057c;
+}
+
+.friendInvitesButtonsProfile{
+    background-color:#023E8A;
+    color: white;
+    border: 1px solid #023E8A;
+    margin-bottom: 5%;
+}
+
+.friendInvitesButtonsAccept{
+    background-color: green;
+    color: white;
+    border: 1px solid green;
+    margin-bottom: 5%;
+}
+
+.friendInvitesButtonsCancel{
+    background-color: #DF1515;
+    color: white;
+    border: 1px solid #DF1515;
+    margin-bottom: 5%;
+}
+
+
+.friendInvitesButtonsProfile:hover{
+    background-color:#023E8A;
+    color: #CBCBCB;
+    border: 1px solid #023E8A;
+    margin-bottom: 5%;
+}
+
+.friendInvitesButtonsAccept:hover{
+    background-color: green;
+    color: #CBCBCB;
+    border: 1px solid green;
+    margin-bottom: 5%;
+}
+
+.friendInvitesButtonsCancel:hover{
+    background-color: #DF1515;
+    color: #CBCBCB;
+    border: 1px solid #DF1515;
+    margin-bottom: 5%;
 }
