--- a/UserProfiles/templates/profile/search_for_user.html
+++ b/UserProfiles/templates/profile/search_for_user.html
@@ -1,6 +1,17 @@
 {% extends "main/base.html" %}
 {% block title %} Wyszukaj użytkownika {% endblock %}
 {% block content %}
+
+<h1 class="pageTitle">
+    <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" fill="currentColor" class="bi bi-person-square"
+         viewBox="0 0 16 16">
+        <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
+        <path d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm12 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1v-1c0-1-1-4-6-4s-6 3-6 4v1a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1z"/>
+    </svg>
+    Wyszukaj użytkowników
+
+</h1>
+
 <div class="container mt-4 mb-4 p-3 d-flex justify-content-center">
     <div class="card p-4">
         <div class=" image d-flex flex-column justify-content-center align-items-center">
@@ -9,7 +20,9 @@
                 {% csrf_token %}
                 {{ form.as_p }}
                 <p style="color:red; font-size:10px; text-align:center;"> {{ warning }} </p>
-                <p style="text-align: center;"><button type="submit">Szukaj</button></p>
+                <p style="text-align: center;">
+                    <button type="submit">Szukaj</button>
+                </p>
             </form>
             {% if users %}
             <ul>
