--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1048,3 +1048,71 @@ td .text-center h5{
 }
 
 /*  search_for_user.html       */
+
+.searchForUserBox{
+    width:70%
+    padding: 3%;
+    margin-top: 2%;
+    margin-left: 3%;
+    margin-right: 3%;
+    margin-bottom: 3%;
+    box-shadow: 5px 5px 10px rgba(0,0,0,0.5);
+    border-radius: 0.5rem;
+    background: #fff;
+}
+
+.searchForUserBox form{
+    margin: 0 auto;
+    width: 80%;
+    text-align: center;
+}
+
+.searchForUserBox form label{
+    display: block;
+    margin-top: 2%;
+    margin-bottom: 2%;
+    font-size: 26px;
+}
+
+.searchForUserBox form input[type="text"],
+.searchForUserBox form textarea{
+    width: 40%;
+    padding: 10px;
+    margin-bottom: 2%;
+    text-align: center;
+}
+
+.searchForUserBoxFormButton{
+    background-color: #cf057c;
+    color: white;
+    border: 1px solid #cf057c;
+    width: 20%;
+    margin-bottom: 3%;
+    text-align: center;
+    margin-left: 40%;
+}
+
+.searchForUserBoxFormButton:hover{
+    background-color: #023E8A;
+    color: white;
+    border: 1px solid #023E8A;
+}
+
+.searchForUserAvatar{
+    width: 10%;
+    margin-right: 2%;
+}
+
+.searchForUserName{
+    text-decoration: none;
+    color: #cf057c;
+    font-size: 19px;
+}
+
+.searchForUserName:hover{
+    color: #023E8A;
+}
+
+.searchForUserList{
+    margin-bottom: 1%;
+}
