Przy edycji danego prezentu po kliknieciu guzika - "Dodaj prezenty" strona sie wysypuje

--- a/WishLists/templates/addPresentsToList.html
+++ b/WishLists/templates/addPresentsToList.html
@@ -98,7 +98,7 @@
                 <button class="btn btn-lg rounded-pill addPresentsButtonEnd">Zakończ dodawanie</button>
             </a>
             {% else %}
-            <a href="add-present/">
+            <a href="/edit-list/{{ lista.id }}/add-present/">
                 <button class="btn btn-lg rounded-pill addPresentsButtonAdd2">Dodaj prezenty</button>
             </a>
             <br>
