--- a/UserProfiles/templates/friends/friends_list.html
+++ b/UserProfiles/templates/friends/friends_list.html
@@ -11,22 +11,23 @@
     Twoi znajomi
 </h1>
 
-<div class="modal fade" id="confirmDeleteModal" tabindex="-1" aria-labelledby="confirmDeleteModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="confirmDeleteModalLabel">Potwierdź usunięcie</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        Czy na pewno chcesz usunąć tego użytkownika ze znajomych?
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Anuluj</button>
-        <a id="confirmDeleteLink" href="#" class="btn btn-danger">Usuń</a>
-      </div>
+<div class="modal fade" id="confirmDeleteModal" tabindex="-1" aria-labelledby="confirmDeleteModalLabel"
+     aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="confirmDeleteModalLabel">Potwierdź usunięcie</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                Czy na pewno chcesz usunąć tego użytkownika ze znajomych?
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Anuluj</button>
+                <a id="confirmDeleteLink" href="#" class="btn btn-danger">Usuń</a>
+            </div>
+        </div>
     </div>
-  </div>
 </div>
 <div class="event-schedule-area-two listyZnajomych2">
     <div class="row">
@@ -53,7 +54,8 @@
                                         <img src="{% static 'avatars/'%}{{ znajomy.profiluzytkownika.avatar }}"
                                              class="avatarFriends rounded-circle mb-3">
                                         {% else %}
-                                        <img src="{% static 'avatars/default_profile_pic.jpg'%}" class="avatarFriends rounded-circle mb-3">
+                                        <img src="{% static 'avatars/default_profile_pic.jpg'%}"
+                                             class="avatarFriends rounded-circle mb-3">
                                         {% endif %}
                                         <div class="event-wrap text-center">
                                             <h4 style="color: #cf057c;">{{ znajomy.username }}
@@ -70,7 +72,8 @@
                                     <div class="text-center">
                                         <a href="/profile/{{znajomy.username}}/">
                                             <button type="button" class="btn btn-lg rounded-pill friendsButtons">
-                                                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32"
+                                                     fill="currentColor"
                                                      class="bi bi-person-circle" viewBox="0 0 16 16">
                                                     <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
                                                     <path fill-rule="evenodd"
@@ -83,18 +86,21 @@
                                 </td>
                                 <td>
                                     <div class="text-center">
-                                        <button type="button" class="btn btn-lg rounded-pill friendsButtons" data-bs-toggle="modal" data-bs-target="#confirmDeleteModal">
-                                            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-person-fill-dash" viewBox="0 0 16 16">
+                                        <button type="button" class="btn btn-lg rounded-pill friendsButtons"
+                                                data-bs-toggle="modal" data-bs-target="#confirmDeleteModal"
+                                                onclick="setConfirmDeleteLink('/profile/{{ znajomy.username }}/unfriend/')">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32"
+                                                 fill="currentColor" class="bi bi-person-fill-dash" viewBox="0 0 16 16">
                                                 <path d="M12.5 16a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7M11 12h3a.5.5 0 0 1 0 1h-3a.5.5 0 0 1 0-1m0-7a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
                                                 <path d="M2 13c0 1 1 1 1 1h5.256A4.493 4.493 0 0 1 8 12.5a4.49 0 0 1 1.544-3.393C9.077 9.038 8.564 9 8 9c-5 0-6 3-6 4"/>
                                             </svg>
                                             Usuń znajomego
                                         </button>
                                         <script>
-                                            const confirmDeleteLink = document.getElementById('confirmDeleteLink');
-                                            confirmDeleteLink.addEventListener('click', function() {
-                                                confirmDeleteLink.href = "/profile/{{znajomy.username}}/unfriend/";
-                                            });
+                                            function setConfirmDeleteLink(link) {
+                                                const confirmDeleteLink = document.getElementById('confirmDeleteLink');
+                                                confirmDeleteLink.href = link;
+                                            }
                                         </script>
                                     </div>
                                 </td>
@@ -108,8 +114,9 @@
                             <h2>Wyszukaj ich i wyślij im zaproszenie.</h2>
                             <a href="/search-for-user">
                                 <button class="btn btn-lg rounded-pill NoFriendsButtons">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
-                                      <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor"
+                                         class="bi bi-search" viewBox="0 0 16 16">
+                                        <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
                                     </svg>
                                     Wyszukaj znajomego
                                 </button>
